fix: make title visible

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,46 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 * {
-    margin: 0;
-    font-family: Lato, sans-serif;
-    overflow: hidden;
+  margin: 0;
+  font-family: Lato, sans-serif;
 }
 
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .states {
-    fill: none;
-    stroke: white;
+  fill: none;
+  stroke: white;
 }
 
 h1 {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 h1,
 h3 {
-    text-align: center;
-    margin-bottom: 1rem;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 div#tooltip {
-    position: absolute;
-    padding: 0.5rem;
-    font-size: 1rem;
-    background-color: ghostwhite;
-    box-shadow: 0 0 20px black;
-    border-radius: 0.75rem;
-    pointer-events: none;
+  position: absolute;
+  padding: 0.5rem;
+  font-size: 1rem;
+  background-color: ghostwhite;
+  box-shadow: 0 0 20px black;
+  border-radius: 0.75rem;
+  pointer-events: none;
 }
 
 @media only screen and (max-width: 1000px) {
-    #chart {
-        overflow-x: auto;
-    }
-    
+  #chart {
+    overflow-x: auto;
+  }
 }
